Fixing z-index bug

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -9,7 +9,6 @@
   align-content: center;
   align-items: center;
   justify-content: space-around;
-  z-index: 1;
 }
 
 .header-content h1 {
