--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,7 @@
 #nav-container {
     box-shadow: 0 3px 5px rgba(0,0,0,0.2);
     height: 0;
+    z-index: 999;
 }
 
 nav ul li a.font-nav{
